--- a/solutions/r_wrang_solutions.Rmd
+++ b/solutions/r_wrang_solutions.Rmd
@@ -57,17 +57,16 @@ long
 
 ## Exercise 1
 
-#Create a new object called africa_asia that is filtered by “Africa” and “Asia”*. Select all variables except for gdpPercap. 
-#Use the pipe operator to chain the functions together.
+Create a new data frame object called `cats_and_dogs` that filters the `animals` data frame for all observations for which the animal type is a cat or a dog. Use the pipe operator to chain the functions together. 
+
 ```{r}
-africa_asia_lifeExp <- gapminder %>% 
-  filter(continent == "Africa" & lifeExp < 60 | continent == "Asia" & lifeExp <60) %>%
-  select(-gdpPercap)
+cats_and_dogs <- animals %>% 
+  filter(Type == "Cat"|Type == "Dog")
 ```
   
 ## Exercise 2
 
-Let's put the verbs we've learned so far into action all at once. Answer the question "What are the total number of dog rescues for each borough?" by making a data frame called `borough_dog_rescues` and arrange the rows by borough in alphabetical order. 
+Let's put the verbs we've learned so far into action all at once. Answer the question "What are the total number of dog rescues for each borough?" by making a data frame called `borough_dog_rescues` and arranging the rows by borough in alphabetical order. 
 
 ```{r}
 ## Your Code here 
@@ -97,10 +96,9 @@ bird_stats <- animals %>%
 ```
 
 
-## Exercise 3
+## Exercise 4
 
-#Use dplyr to add a column to the gapminder dataset that contains the 
-#total population of the continent of each observation in a given year.
+Add a column to the gapminder dataset that contains the continent's total population of each observation in a given year. For example, if the first observation was Afghanistan in 1952, the new column would contain the population of Asia in 1952. 
 
 ```{r}
 gapminder <- gapminder %>% 
@@ -109,12 +107,9 @@ gapminder <- gapminder %>%
 ``` 
 
   
-## Exercise 4
+## Exercise 5
 
-#Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the difference between 
-#the observation's `gdpPercap` and the mean `gdpPercap` of the continent in that year,
-#(b) arrange the dataframe by the column you just created, in descending order (so that 
-#the relatively richest country/years are listed first)
+Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the difference between the observation's `gdpPercap` and the mean `gdpPercap` of the continent in that year, (b) arrange the data frame by the column you just created, in descending order (so that the relatively richest country/years are listed first)
 
 ```{r}
 gapminder_gdpPercap_diff <- gapminder %>%  
@@ -125,21 +120,34 @@ gapminder_gdpPercap_diff <- gapminder %>%
 ```
   
   
-## Exercise  5
+## Exercise 6
 
- 
-#Subset the results from the last exercise to select only the country, year, and gdpPercap_diff columns. 
-#Use tidyr put it in wide format # so that countries are rows and years are columns. You might need to use  ungroup() before the select() function.
-#Then turn the dataframe above back into the long format with three columns: country, year, and gdpPercap_diff.
+1. We have provided the code below to answer Exercise 5. Ungroup the results, then subset them to select only the `country`, `year`, and `gdpPercap_diff` columns. Put it in a wide format so that countries are rows and years are columns.
 
 ```{r}
-#TODO replace these with pivot_longer and pivot_wider
+## Starter code 
+gapminder_gdpPercap_diff <- gapminder %>%  
+  group_by(continent, year) %>% 
+   mutate(mean_continent_gdp = mean(gdpPercap),
+          gdpPercap_diff = gdpPercap - mean_continent_gdp)
+
 gapminder_wide <- gapminder_gdpPercap_diff %>% 
   ungroup() %>% 
   select(country, year, gdpPercap_diff) %>% 
-  spread(year, gdpPercap_diff)
+  pivot_wider(
+    names_from = year,
+    values_from = gdpPercap_diff
+  )
+```
 
+2. Now, turn the data frame above back into the long format with three columns: `country`, `year`, and `gdpPercap_diff`.
+
+```{r}
 gapminder_long <- gapminder_wide %>% 
-  gather(year, gdpPercap_diff, `1952`: `2007`)
+  pivot_longer(
+    cols = c(-country),
+    names_to = "year",
+    values_to = "gdpPercap_diff"
+  )
 ```
 
