--- a/lessons/Tutorial.Rmd
+++ b/lessons/Tutorial.Rmd
@@ -143,7 +143,7 @@ jobs <- read_csv(here("data/jobs.csv"))
 
 ## Workflow 
 jobs %>% 
-  select(State, Occuptation, Age)%>%
+  select(State, Occupation, Age)%>%
   filter(State %in% c("Alaska","California", "Oregon", "Washington"))%>%
   mutate(in_ag = if_else(Occupation == "Farmer", "Yes", "No"))%>%
   group_by(State, in_ag)%>%
@@ -152,7 +152,7 @@ jobs %>%
 
 ## We can also save the output of our workflow to a new data frame object
 wc_lifeExp <- jobs %>% 
-  select(State, Occuptation, Age)%>%
+  select(State, Occupation, Age)%>%
   filter(State %in% c("Alaska","California", "Oregon", "Washington"))%>%
   mutate(in_ag = if_else(Occupation == "Farmer", "Yes", "No"))%>%
   group_by(State, in_ag)%>%
@@ -586,7 +586,7 @@ gap_original <- gap_long_sep %>%
   pivot_wider(
     names_from = obs_type, 
     values_from = obs_values)
-head(gap_medium)
+head(gap_original)
 ```
 
 ## Exercise 6
