standardized exercise names

--- a/lessons/Tutorial.Rmd
+++ b/lessons/Tutorial.Rmd
@@ -249,7 +249,7 @@ As with the examples we have seen before, we take the animals data frame and the
 | !is.na                 | is not NA                |
 |&, \|, !, xor, any, all | Boolean operators        |
  
-## Exercise 1
+## Challenge 3
 
 Create a new data frame object called `cats_and_dogs` that filters the `animals` data frame for all observations for which the animal type is a cat or a dog. Use the pipe operator to chain the functions together. 
 
@@ -369,7 +369,7 @@ borough_cat_rescues %>%
 
 ```
 
-## Exercise 2
+## Challenge 4
 
 Let's put the verbs we've learned so far into action all at once. Answer the question "What are the total number of dog rescues for each borough?" by making a data frame called `borough_dog_rescues` and arranging the rows by borough in alphabetical order. 
 
@@ -438,7 +438,7 @@ animals %>%
 
 ```
 
-## Exercise 3
+## Challenge 5
 
 Create a data frame that considers the average rescue cost, median rescue cost, and standard deviation for bird rescues for each property category year. Save the result of your workflow into a data frame object called `bird_stats`
 
@@ -492,7 +492,7 @@ gap_count <- gapminder %>%
 
 ```
 
-## Exercise 4
+## Challenge 6
 
 Add a column to the gapminder dataset that contains the continent's total population of each observation in a given year. For example, if the first observation was Afghanistan in 1952, the new column would contain the population of Asia in 1952. 
 
@@ -500,7 +500,7 @@ Add a column to the gapminder dataset that contains the continent's total popula
 #YOUR CODE HERE
 ```
 
-## Exercise 5
+## Challenge 7
 
 Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the difference between the observation's `gdpPercap` and the mean `gdpPercap` of the continent in that year, (b) arrange the data frame by the column you just created, in descending order (so that the relatively richest country/years are listed first)
 
@@ -594,9 +594,9 @@ gap_original <- gap_long_sep %>%
 head(gap_original)
 ```
 
-## Exercise 6
+## Challenge 8
 
-1. We have provided the code below to answer Exercise 5. Ungroup the results, then subset them to select only the `country`, `year`, and `gdpPercap_diff` columns. Put it in a wide format so that countries are rows and years are columns.
+1. We have provided the code below to answer Challenge 7. Ungroup the results, then subset them to select only the `country`, `year`, and `gdpPercap_diff` columns. Put it in a wide format so that countries are rows and years are columns.
 
 2. Now, turn the data frame above back into the long format with three columns: `country`, `year`, and `gdpPercap_diff`.
 
